@@ -1,14 +1,13 @@
 package com.epam.jdi.httptests.support;
 
 import com.epam.http.logger.ILogger;
-import org.apache.commons.io.FileUtils;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 
-import java.io.File;
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.nio.charset.Charset;
-import java.util.concurrent.TimeUnit;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 
 import static com.epam.http.logger.HTTPLogger.instance;
 
@@ -18,17 +17,20 @@ public abstract class WithRetryService {
     protected Process application;
 
     @BeforeClass
-    public void startSpringBootApplication() throws IOException, InterruptedException {
-        ProcessBuilder builder = new ProcessBuilder("java", "-jar", "src/test/resources/jdi-dark-retry-service.jar");
-        File logFile = new File(System.getProperty("user.dir") + "\\target\\log.txt");
-        builder.redirectOutput(logFile);
-        application = builder.start();
-        logger.info("Inside startSpringBootApplication(): " + application.getOutputStream().toString());
-        String log = "";
-        while (application.isAlive() && !log.contains("Started App")) {
-            TimeUnit.SECONDS.sleep(1);
-            log = FileUtils.readFileToString(logFile, Charset.defaultCharset());
+    public void startSpringBootApplication() throws IOException {
+        final String startRetryServiceCommand = "java -jar src/test/resources/jdi-dark-retry-service.jar";
+        application = Runtime.getRuntime().exec(startRetryServiceCommand);
+        InputStream in = application.getInputStream();
+        BufferedReader reader = new BufferedReader (new InputStreamReader(in));
+        String line = reader.readLine();
+        final String successfullyStartedApp = "Started App in";
+        final String failedAppStart = "Stopping service";
+        while (line != null && !(line.trim().contains(successfullyStartedApp) || line.trim().contains(failedAppStart))) {
+            logger.debug("Retrying service stdout: " + line);
+            line = reader.readLine();
         }
+        reader.close();
+        in.close();
     }
 
     @AfterClass
